Update raspberry.sh